--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -122,11 +122,11 @@
       padding: 0;
   }
 
-  .about .image {
+  .about .img-fluid {
       background-position: top center;
       background-size: contain;
       position: relative;
-      width: 400px;
+      width: 300px;
       height: auto;
   }
 
@@ -156,6 +156,10 @@
           width: 100%;
           height: 300px;
           top: 1px;
+      }
+
+      .img-fluid {
+          margin-bottom: 20px;
       }
 
   }
