--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -113,6 +113,8 @@
 # Hero Section
 --------------------------------------------------------------*/
   #hero {
+      widht: 100%;
+      height: 100vh;
       background: url("../img/hero-bg.jpg") top center;
       background-size: cover;
       background-attachment: fixed;
@@ -181,11 +183,16 @@
           margin-bottom: 20px;
       }
 
-      #hero,
-      #hero::before {
+      #hero {
+          widht: 100%;
+          height: 100vh;
           background-attachment: fixed;
           background-size: cover;
           background-position: center;
+      }
+
+      #hero:before {
+          height: 100vh;
       }
   }
 
