--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,269 +1,266 @@
-  /*--------------------------------------------------------------
+/*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-  #main {
-      margin: 0 auto;
-      padding: 0;
-  }
+#main {
+  margin: 0 auto;
+  padding: 0;
+}
 
-  body {
-      font-family: "DM Sans";
-      scroll-behavior: smooth;
-  }
+body {
+  font-family: "DM Sans";
+  scroll-behavior: smooth;
+}
 
-  ::-webkit-scrollbar {
-      display: none;
-  }
+::-webkit-scrollbar {
+  display: none;
+}
 
-  a {
-      color: #062a87;
-      text-decoration: none;
-  }
+a {
+  color: #062a87;
+  text-decoration: none;
+}
 
-  a:hover {
-      color: #062a87;
-      text-decoration: none;
-  }
+a:hover {
+  color: #062a87;
+  text-decoration: none;
+}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
-      font-family: "DM Sans";
-      color: #444444;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: "DM Sans";
+  color: #444444;
+}
 
-
-  /*--------------------------------------------------------------
+/*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
-  section {
-      padding: 50px 0;
-  }
+section {
+  padding: 50px 0;
+}
 
-  .section-title {
-      padding: 20px 0;
-      position: relative;
-  }
+.section-title {
+  padding: 20px 0;
+  position: relative;
+}
 
+.section-title h2 {
+  text-align: center;
+  font-family: "DM Sans";
+  font-size: 32px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: 2px;
+  padding-bottom: 0;
+  color: #444444;
+  position: relative;
+  z-index: 1;
+}
+
+.section-title h3 {
+  font-family: "DM Sans";
+  font-size: 30px;
+  font-weight: 700;
+  font-style: italic;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.section-title p {
+  font-size: 17px;
+  font-family: "DM Sans";
+  margin-bottom: 0;
+  position: relative;
+  z-index: 2;
+  text-align: justify;
+}
+
+.section-title span {
+  position: absolute;
+  top: 30px;
+  color: #eef0f2;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  font-weight: 700;
+  font-size: 52px;
+  text-transform: uppercase;
+  line-height: 0;
+}
+
+@media (max-width: 575px) {
   .section-title h2 {
-      text-align: center;
-      font-family: "DM Sans";
-      font-size: 32px;
-      font-weight: 700;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      margin-bottom: 2px;
-      padding-bottom: 0;
-      color: #444444;
-      position: relative;
-      z-index: 1;
+    font-size: 28px;
+    margin-bottom: 15px;
   }
 
   .section-title h3 {
-      font-family: "DM Sans";
-      font-size: 30px;
-      font-weight: 700;
-      font-style: italic;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-  }
-
-  .section-title p {
-      font-size: 17px;
-      font-family: "DM Sans";
-      margin-bottom: 0;
-      position: relative;
-      z-index: 2;
-      text-align: justify;
+    text-align: center;
   }
 
   .section-title span {
-      position: absolute;
-      top: 30px;
-      color: #eef0f2;
-      left: 0;
-      right: 0;
-      z-index: 1;
-      font-weight: 700;
-      font-size: 52px;
-      text-transform: uppercase;
-      line-height: 0;
+    font-size: 38px;
   }
+}
 
-  @media (max-width: 575px) {
-      .section-title h2 {
-          font-size: 28px;
-          margin-bottom: 15px;
-      }
-
-      .section-title h3 {
-          text-align: center;
-      }
-
-      .section-title span {
-          font-size: 38px;
-      }
-  }
-
-  /*--------------------------------------------------------------
+/*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
-  #hero {
-      widht: 100%;
-      height: 100vh;
-      background: url("../img/hero-bg.jpg") top center;
-      background-size: cover;
-      background-attachment: fixed;
-  }
+#hero {
+  width: 100%;
+  height: 100vh;
+  background: url("../img/hero-bg.jpg") top center;
+  background-size: cover;
+  background-attachment: fixed;
+}
 
-  #hero:before {
-      content: "";
-      background: rgba(0, 0, 0, 0.45);
-      position: absolute;
-      bottom: 0;
-      top: 0;
-      left: 0;
-      right: 0;
-  }
+#hero::before {
+  content: "";
+  background: rgba(0, 0, 0, 0.45);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
 
-  #hero .hero-container {
-      position: absolute;
-      bottom: 0;
-      top: 0;
-      left: 0;
-      right: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-  }
+#hero .hero-container {
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
+#hero h1 {
+  padding: 0;
+  font-size: 60px;
+  font-family: "Satisfy", serif;
+  color: white;
+}
+
+#hero h2 {
+  color: #e7e7e7;
+  padding: 0 0 120px 0;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+
+#hero .btn-scroll {
+  transition: 0.4s;
+  color: rgba(255, 255, 255, 0.864);
+  animation: up-down 1s ease-in-out infinite alternate-reverse both;
+}
+
+#hero .btn-scroll i {
+  font-size: 48px;
+}
+
+#hero .btn-scroll:hover {
+  color: #2261ff;
+}
+
+@media (max-width: 476px) {
   #hero h1 {
-      padding: 0;
-      font-size: 60px;
-      font-family: "Satisfy", serif;
-      color: white;
+    font-size: 40px;
+    text-align: center;
   }
 
   #hero h2 {
-      color: #e7e7e7;
-      padding: 0 0 120px 0;
-      font-size: 14px;
-      font-weight: 500;
-      letter-spacing: 3px;
-      text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 20px;
   }
 
-  #hero .btn-scroll {
-      transition: 0.4s;
-      color: rgba(255, 255, 255, 0.864);
-      animation: up-down 1s ease-in-out infinite alternate-reverse both;
+  #hero {
+    height: 100vh;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+  }
+  #hero::before {
+    height: 100vh;
+  }
+}
+
+@keyframes up-down {
+  0% {
+    transform: translateY(5px);
   }
 
-  #hero .btn-scroll i {
-      font-size: 48px;
+  100% {
+    transform: translateY(-5px);
   }
+}
 
-  #hero .btn-scroll:hover {
-      color: #2261ff;
-  }
-
-  @media (max-width: 476px) {
-      #hero h1 {
-          font-size: 40px;
-          text-align: center;
-      }
-
-      #hero h2 {
-          text-align: center;
-          margin-bottom: 20px;
-      }
-
-      #hero {
-          widht: 100%;
-          height: 100vh;
-          background-attachment: fixed;
-          background-size: cover;
-          background-position: center;
-      }
-
-      #hero:before {
-          height: 100vh;
-      }
-  }
-
-  @keyframes up-down {
-      0% {
-          transform: translateY(5px);
-      }
-
-      100% {
-          transform: translateY(-5px);
-      }
-  }
-
-  /*--------------------------------------------------------------
+/*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
+.breadcrumbs {
+  padding: 20px 0;
+  background-color: #f4f5f6;
+  min-height: 40px;
+  margin-top: 78px;
+}
+
+@media (max-width: 992px) {
   .breadcrumbs {
-      padding: 20px 0;
-      background-color: #f4f5f6;
-      min-height: 40px;
-      margin-top: 78px;
+    margin-top: 60px;
   }
+}
 
-  @media (max-width: 992px) {
-      .breadcrumbs {
-          margin-top: 60px;
-      }
-  }
+.breadcrumbs h2 {
+  font-size: 24px;
+  font-weight: 300;
+  margin: 0;
+}
 
+@media (max-width: 992px) {
   .breadcrumbs h2 {
-      font-size: 24px;
-      font-weight: 300;
-      margin: 0;
+    margin: 0 0 10px 0;
   }
+}
 
-  @media (max-width: 992px) {
-      .breadcrumbs h2 {
-          margin: 0 0 10px 0;
-      }
+.breadcrumbs ol {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+}
+
+.breadcrumbs ol li + li {
+  padding-left: 10px;
+}
+
+.breadcrumbs ol li + li::before {
+  display: inline-block;
+  padding-right: 10px;
+  color: #6c757d;
+  content: "";
+}
+
+@media (max-width: 768px) {
+  .breadcrumbs .d-flex {
+    display: block;
   }
 
   .breadcrumbs ol {
-      display: flex;
-      flex-wrap: wrap;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      font-size: 14px;
+    display: block;
   }
 
-  .breadcrumbs ol li+li {
-      padding-left: 10px;
+  .breadcrumbs ol li {
+    display: inline-block;
   }
-
-  .breadcrumbs ol li+li::before {
-      display: inline-block;
-      padding-right: 10px;
-      color: #6c757d;
-      content: "";
-  }
-
-  @media (max-width: 768px) {
-      .breadcrumbs .d-flex {
-          display: block;
-      }
-
-      .breadcrumbs ol {
-          display: block;
-      }
-
-      .breadcrumbs ol li {
-          display: inline-block;
-      }
-  }
+}
