--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -127,7 +127,7 @@
       background-size: contain;
       position: relative;
       width: 300px;
-      height: auto;
+      height: 300px;
   }
 
   .about {
@@ -153,9 +153,9 @@
       .about .image {
           margin: 0 auto;
           display: block;
-          width: 100%;
+          width: 300px;
           height: 300px;
-          top: 1px;
+          top: 0px;
       }
 
       .img-fluid {
